--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MySide</title>
     <script src="https://kit.fontawesome.com/fdcd164a1f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap"
+          rel="stylesheet">
     <!--SASS-->
     <link rel="stylesheet" href="css/Style.css">
 </head>
 <body>
 
-<audio id="player" autoplay  src="./Music/Last%20Christmas%20Remix%20-%20Merry%20Christmas%20%20Nhạc%20Giáng%20Sinh%20Remix%20Sôi%20Động%20Hay%20N_256k.mp3"></audio>
+<audio id="player" autoplay
+       src="./Music/Last%20Christmas%20Remix%20-%20Merry%20Christmas%20%20Nhạc%20Giáng%20Sinh%20Remix%20Sôi%20Động%20Hay%20N_256k.mp3"></audio>
 
 <div class="container">
     <div class="home">
@@ -26,22 +30,100 @@
                 <div class="guns">
                     <span class="btn-music">Last Christmas</span>
                     <div class="btn-controls">
-                        <button onclick="document.getElementById('player').play()"><i class="btn-music fa-solid fa-play"></i></button>
-                        <button onclick="document.getElementById('player').pause()"><i class="fa-solid fa-pause"></i></button>
-                        <button onclick="document.getElementById('player').volume += 0.1"><i class="fa-solid fa-volume-high"></i></button>
-                        <button onclick="document.getElementById('player').volume -= 0.1"><i class="fa-solid fa-volume-low"></i></button>
+                        <button onclick="document.getElementById('player').play()"><i
+                                class="btn-music fa-solid fa-play"></i></button>
+                        <button onclick="document.getElementById('player').pause()"><i class="fa-solid fa-pause"></i>
+                        </button>
+                        <button onclick="document.getElementById('player').load()"><i class="fa-solid fa-repeat"></i>
+                        </button>
+                        <button onclick="document.getElementById('player').volume += 0.1"><i
+                                class="fa-solid fa-volume-high"></i></button>
+                        <button onclick="document.getElementById('player').volume -= 0.1"><i
+                                class="fa-solid fa-volume-low"></i></button>
                     </div>
                 </div>
+                <p>
+                    Last Christmas <br>
+                    Oooohhhh<br>
+                    Oh<br>
+                    <br>
+                    Last Christmas I gave you my heart<br>
+                    But the very next day you gave it away<br>
+                    This year, to save me from tears,<br>
+                    I'll give it to someone special<br>
+                    <br>
+                    Last Christmas I gave you my heart<br>
+                    But the very next day you gave it away<br>
+                    (You gave it away)<br>
+                    This year, to save me from tears,<br>
+                    I'll give it to someone special<br>
+                    (Special)<br>
+                    <br>
+                    Once bitten and twice shy<br>
+                    I keep my distance, but you still catch my eye<br>
+                    Tell me baby, do you recognize me?<br>
+                    Well, it's been a year, it doesn't surprise me<br>
+                    <br>
+                    ("Merry Christmas") I wrapped it up and sent it<br>
+                    With a note saying "I love you", I meant it<br>
+                    Now I know what a fool I've been<br>
+                    But if you kissed me now, I know you'd fool me again<br>
+                    <br>
+                    Last Christmas I gave you my heart<br>
+                    But the very next day you gave it away<br>
+                    (You gave it away)<br>
+                    This year, to save me from tears,<br>
+                    I'll give it to someone special<br>
+                    (Special)<br>
+                    <br>
+                    Last Christmas I gave you my heart<br>
+                    But the very next day you gave it away<br>
+                    (You gave it away)<br>
+                    This year, to save me from tears,<br>
+                    I'll give it to someone special<br>
+                    (Special)<br>
+                    <br>
+                    Oooohhhh<br>
+                    Oh oh baby<br>
+                    <br>
+                    A crowded room, friends with tired eyes<br>
+                    I'm hiding from you and your soul of ice<br>
+                    My god, I thought you were someone to rely on<br>
+                    Me? I guess I was a shoulder to cry on<br>
+                    <br>
+                    A face on a lover with a fire in his heart<br>
+                    A man under cover but you tore me apart<br>
+                    Oh oh now I've found a real love<br>
+                    You'll never fool me again<br>
+                    <br>
+                    Last Christmas I gave you my heart<br>
+                    But the very next day you gave it away<br>
+                    (You gave it away)<br>
+                    This year, to save me from tears,<br>
+                    I'll give it to someone special<br>
+                    Special<br>
+                    <br>
+                    (Last Christmas I gave you my heart) Gave you my heart<br>
+                    (But the very next day) You gave me away (you gave it away)<br>
+                    (This year, to save me from tears)<br>
+                    (I'll give it to someone special)<br>
+                    Special<br>
+                    <br>
+                    (A face on a lover with a fire in his heart) Gave you my heart…<br>
+                    (A man under cover but you tore him apart<br>
+                    Maybe next year<br>
+                    I'll give it to someone<br>
+                    I'll give it to someone<br>
+                    Special)<br>
+                    Special<br>
+                    Someone<br>
+                    </p>
+                <h1>В ролях:</h1>
+                <h1>Хурсанали</h1>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-
-
 
 
 <script src="script.js"></script>
